# ml-project-template

./: cookiecutter.json  template.py
{{cookiecutter.project_name}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_name}}/configs/: data_config.yaml  pipeline_config.yaml
{{cookiecutter.project_name}}/notebooks/: root.py
{{cookiecutter.project_name}}/scripts/: run_pipeline.py  serve_model.py  train_model.py
{{cookiecutter.project_name}}/src/data/: load_data.py  preprocess.py
{{cookiecutter.project_name}}/tests/: test_features.py  test_models.py
